# plover-application-controls

./: README.md  setup.cfg
plover_application_controls/: __init__.py  command.py  extension.py  meta.py  window_details.py  window_tracker.py
plover_application_controls/pywinctl/: __init__.py  get.py
plover_application_controls/window/: __init__.py  details.py  history.py  tracker.py
