[metadata]
name = plover-application-controls
keywords = plover plover_plugin
version = 1.1.0
description = Plover plugin to monitor and control the currently active window
long_description = file: README.md
long_description_content_type = text/markdown
author = Pipatooa
author_email = pipatooa@pipatooa.co.uk
url = https://github.com/Pipatooa/plover-application-controls


[options]
zip_safe = True
python_requires = >=3.7
setup_requires =
  setuptools >= 30.3.0
install_requires =
  plover >= 4.0.0dev12
  PyWinCtl ~= 0.0.42
packages = find:
include_package_data = True

[options.packages.find]
include = plover_application_controls*

[options.entry_points]
plover.extension =
  application_controls = plover_application_controls:ApplicationControlExtension
plover.meta =
  application_name = plover_application_controls.meta:meta
plover.command =
  application = plover_application_controls.command:command
